fixed whitespace bottom dashboard

--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -14,7 +14,7 @@
     rgba(73, 57, 154, 0.3)
   );
   // border: 2px solid red;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
 }
 
 .contentWrapper {
@@ -160,7 +160,7 @@
   // width: 70%;
   // max-width: 1000px;
   margin: 0 auto 4rem;
-  // min-height: 300px;
+  min-height: 300px;
   // max-height: 100%;
   height: 100%;
   background-color: white;
